--- a/Server/src/views/oAuth.ejs
+++ b/Server/src/views/oAuth.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -16,15 +16,15 @@
 
 <h2>Login By OAuth</h2>
 
-<!-- Google Login -->
+ Google Login -->
 
-<a href="/oauthorize/auth/google">
+<!-- <a href="/oauthorize/auth/google">
    <button type="submit">Login with Google</button>
-</a>
+</a> -->
 
 <!-- <form action="/google" method="GET">
   <button type="submit">Login with Google</button>
 </form> -->
 
-</body>
-</html>
+<!-- </body>
+</html>  -->
